[metadata]
name = enetpy
author = Thermondo GmbH
author-email = opensource@thermondo.com
summary = Python wrapper for the enet Marktpartner API
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home-page = https://github.com/Thermondo/python-enet
project_urls =
    Bug Tracker = https://github.com/Thermondo/python-enet/issues
    Documentation = https://github.com/Thermondo/python-enet
    Source Code = https://github.com/Thermondo/python-enet
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    api

test_require =
    pytest

[files]
packages =
    enet

[aliases]
test = pytest

[pbr]
skip_authors = true
skip_changelog = true

[tool:pytest]
addopts = --tb=short -rxs --strict

[flake8]
max_line_length = 99

[pydocstyle]
add_ignore = D1
